--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <body>
         <h1> Welcome to my website</h1>
         <p> This is a paragraph</p>
+        <p> This is a new paragraph</p> 
         <a href="https://www.google.com"> Google </a>
         <img src="https://www.google.com/images/branding/googlelogo/1x/googlelogo_color_272x92dp.png" alt="Google Logo">
         <ul>
